--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.54.5"
+    "sass": "^1.54.5",
+    "superagent": "^8.0.0"
   },
   "scripts": {
     "predeploy": "npm run build",
