--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "react-learning",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://artmeister.github.io/react-learning-itacademy",
